# romutils

./: .gitignore  Makefile.in  README.md  configure.ac
EMMC_THGBMHG6C1LBAIL/: Makefile.in  partition_info.inc  usb_update_ph1-ld20-global-v4-android.txt.in
EMMC_THGBMHG7C1LBAIL/: partition_info.inc  usb_update_ph1-ld20-global-v4-android.txt.in
